# serializer version: 1
# name: test_cli_error_extra_settings
  '''
  Invalid settings: 1 validation error for Settings
  cause-error
    Extra inputs are not permitted [type=extra_forbidden, input_value=True, input_type=bool]
      For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
  '''
# ---
# name: test_cli_error_missing_settings
  '''
  Invalid settings: 1 validation error for Settings
  include-similar-words
    Field required [type=missing, input_value={'include-synonyms': True}, input_type=dict]
      For further information visit https://errors.pydantic.dev/2.12/v/missing
  '''
# ---
# name: test_cli_error_type_settings
  '''
  Invalid settings: 1 validation error for Settings
  include-similar-words
    Input should be a valid boolean [type=bool_type, input_value=1, input_type=int]
      For further information visit https://errors.pydantic.dev/2.12/v/bool_type
  '''
# ---
